[package]
name = "fakie"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "The flaky http proxy."
homepage = "https://github.com/tmeumann/fakie"
repository = "https://github.com/tmeumann/fakie"
readme = "README.md"
keywords = ["http", "proxy", "flaky", "testing"]
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "web-programming",
]

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
hickory-resolver = "0.25"
pingora = { version = "0.5", features = ["lb", "rustls"] }
termcolor = "1"
url = "2"
